objects/sbaa__ApprovalVariable__c.object
<CustomObject>
    <customHelpPage>sbaa__ApprovalVariableHelp</customHelpPage>
    <description>This is the Approval Variable associated with your Approval.</description>
    <fields>
        <fullName>sbaa__AggregateField__c</fullName>
        <description>Field that&apos;s acted upon by the aggregate function.</description>
        <inlineHelpText>Field that&apos;s acted upon by the aggregate function.</inlineHelpText>
        <label>Aggregate Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>List_Total__c</fullName>
                </value>
                <value>
                    <fullName>Total Price</fullName>
                </value>
                <value>
                    <fullName>Subtotal</fullName>
                </value>
                <value>
                    <fullName>ApprovalLevel__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__PrintOrder__c</fullName>
                </value>
                <value>
                    <fullName>blng__Quantity__c</fullName>
                </value>
                <value>
                    <fullName>Billing_Approval_Level__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__AggregateFunction__c</fullName>
        <description>Aggregate function used to calculate this variable.</description>
        <inlineHelpText>Aggregate function used to calculate this variable.</inlineHelpText>
        <label>Aggregate Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Min</fullName>
                </value>
                <value>
                    <fullName>Max</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__CombineWith__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Another approval variable to compose with this approval variable if your condition is based on both results.</description>
        <inlineHelpText>Another approval variable to compose with this approval variable if your condition is based on both results.</inlineHelpText>
        <label>Combine With</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipLabel>Approval Variables (Combine With)</relationshipLabel>
        <relationshipName>CombinedSummaryVariables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__FilterField__c</fullName>
        <description>Select the field to use when filtering items for inclusion in this approval variable.</description>
        <inlineHelpText>Select the field to use when filtering items for inclusion in this approval variable.</inlineHelpText>
        <label>Filter Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>sbaa__TargetObject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>Product_Code__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__PrintOrder__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Status__c</fullName>
                </value>
                <value>
                    <fullName>blng__BillingFrequency__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__FilterValue__c</fullName>
        <description>Enter the value to match in this filter.</description>
        <inlineHelpText>Enter the value to match in this filter.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__ListVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval Variable responsible for calculating Total List</description>
        <inlineHelpText>Approval Variable responsible for calculating Total List</inlineHelpText>
        <label>List Variable</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipLabel>Approval Variables (List Variable)</relationshipLabel>
        <relationshipName>ListSummaryVariables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__NetVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval Variable responsible for calculating Total Net</description>
        <inlineHelpText>Approval Variable responsible for calculating Total Net</inlineHelpText>
        <label>Net Variable</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipLabel>Approval Variables (Net Variable)</relationshipLabel>
        <relationshipName>NetSummaryVariables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Operator__c</fullName>
        <description>Choose the operator to use in your filter.</description>
        <inlineHelpText>Choose the operator to use in your filter.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__TargetObject__c</fullName>
        <description>Select the object you want to aggregate.</description>
        <inlineHelpText>Select the object you want to aggregate.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity Product</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Quote__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__QuoteLine__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__QuoteTerm__c</fullName>
                </value>
                <value>
                    <fullName>blng__InvoiceLine__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__Type__c</fullName>
        <description>When Discount is chosen, List Variable and Net Variable must be populated. When Summary is chosen, Aggregate Field and Aggregate Function must be populated.</description>
        <inlineHelpText>When Discount is chosen, List Variable and Net Variable must be populated. When Summary is chosen, Aggregate Field and Aggregate Function must be populated.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Summary</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approval Variable</label>
    <listViews>
        <fullName>sbaa__All</fullName>
        <columns>NAME</columns>
        <columns>sbaa__Type__c</columns>
        <columns>sbaa__TargetObject__c</columns>
        <columns>sbaa__FilterField__c</columns>
        <columns>sbaa__Operator__c</columns>
        <columns>sbaa__FilterValue__c</columns>
        <columns>sbaa__AggregateField__c</columns>
        <columns>sbaa__AggregateFunction__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sbaa__Discount_Variable_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(sbaa__Type__c, &apos;Discount&apos;) &amp;&amp; (ISBLANK(sbaa__ListVariable__c) || ISBLANK(sbaa__NetVariable__c ))</errorConditionFormula>
        <errorMessage>Values for List Variable and Net Variable are required for Discount Variables</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sbaa__Summary_Variable_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(sbaa__Type__c, &apos;Summary&apos;) &amp;&amp; (ISPICKVAL( sbaa__AggregateField__c, &apos;&apos;) || ISPICKVAL(sbaa__AggregateFunction__c, &apos;&apos;))</errorConditionFormula>
        <errorMessage>Values for Aggregate Field and Aggregate Function are required for Summary Variables</errorMessage>
    </validationRules>
</CustomObject>